--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/mureliya.jpg);"></div>
-							<h1><span>Prateek Kumar Mureliya</span></h1>
-							<h3><span>Java Web Developer</span></h3>
+							<h1><span>Prateek Kumar</span></h1>
+							<h3>Senior Software Engineer</h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://twitter.com/Mureliya1" target="_blank"><i class="fa fa-twitter fa-fw"></i></a></li>
-									<li><a href="https://www.facebook.com/pkmureliya" target="_blank"><i class="fa fa-facebook-official fa-fw"></i></a></li>
-									<li><a href="https://www.instagram.com/mureliya/" target="_blank"><i class="fa fa-instagram fa-fw"></i></a></li>
-									<li><a href="https://github.com/mureliya" target="_blank"><i class="fa fa-github fa-fw"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/in/prateek-kumar-67029611a/" target="_blank"><i class="fa fa-linkedin-square fa-fw"></i></a></li>
+									<li><a href="https://x.com/pkmureliya" target="_blank"><i class="fa fa-twitter fa-fw"></i></a></li>
+									<li><a href="https://www.facebook.com/prateek.mureliya" target="_blank"><i class="fa fa-facebook-official fa-fw"></i></a></li>
+									<li><a href="https://www.instagram.com/mureliya" target="_blank"><i class="fa fa-instagram fa-fw"></i></a></li>
+									<li><a href="https://github.com/prateek-mureliya" target="_blank"><i class="fa fa-github fa-fw"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/prateek-mureliya" target="_blank"><i class="fa fa-linkedin-square fa-fw"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -66,9 +66,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Prateek Kumar Mureliya</span></li>
-						<li><span class="first-block">Birth Date:</span><span class="second-block">March-1<sup>st</sup>,1993</span></li>
-                        <li><span class="first-block">Age:</span><span class="second-block">24 years</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Prateek Kumar</span></li>
+						<li><span class="first-block">Birth Date:</span><span class="second-block">March-1<sup>st</sup></span></li>
                         <li><span class="first-block">Birth Place:</span><span class="second-block">Jhansi, India</span></li>
 						<li><span class="first-block">Language:</span><span class="second-block">English and Hindi</span></li>
                         <li><span class="first-block">Current city:</span><span class="second-block">Bangalore, India</span></li>
@@ -278,11 +277,11 @@
 		<div class="container">
 			<div class="row">
                     <ul class="fh5co-social-icons">
-									<li><a href="https://twitter.com/Mureliya1" target="_blank"><i class="fa fa-twitter fa-fw"></i></a></li>
-									<li><a href="https://www.facebook.com/pkmureliya" target="_blank"><i class="fa fa-facebook-official fa-fw"></i></a></li>
-									<li><a href="https://www.instagram.com/mureliya/" target="_blank"><i class="fa fa-instagram fa-fw"></i></a></li>
-									<li><a href="https://github.com/mureliya" target="_blank"><i class="fa fa-github fa-fw"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/in/prateek-kumar-67029611a/" target="_blank"><i class="fa fa-linkedin-square fa-fw"></i></a></li>
+									<li><a href="https://x.com/pkmureliya" target="_blank"><i class="fa fa-twitter fa-fw"></i></a></li>
+									<li><a href="https://www.facebook.com/prateek.mureliya" target="_blank"><i class="fa fa-facebook-official fa-fw"></i></a></li>
+									<li><a href="https://www.instagram.com/mureliya" target="_blank"><i class="fa fa-instagram fa-fw"></i></a></li>
+									<li><a href="https://github.com/prateek-mureliya" target="_blank"><i class="fa fa-github fa-fw"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/prateek-mureliya" target="_blank"><i class="fa fa-linkedin-square fa-fw"></i></a></li>
 								</ul>
 			</div>
 		</div>
